--- a/IndexWeatherApp.html
+++ b/IndexWeatherApp.html
@@ -4,35 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WeatherApp</title>
-    <style>
-      #city {
-        background-color: #f9f7fe;
-        border: none;
-        color: rgba(39, 33, 66, 0.4);
-        font-size: 16px;
-        padding: 20px;
-        width: 75%;
-        border-radius: 6px;
-      }
-      .btnSearch {
-        margin-left: 5px;
-        font-size: 16px;
-        background-color: #f15dd1;
-        color: white;
-        border: none;
-        padding: 20px;
-        line-height: 1;
-        border-radius: 5px;
-      }
-      .current-day {
-        display: flex;
-      }
-      #temperature {
-        font-size: 80px;
-        font-weight: bold;
-        left: 450px;
-      }
-    </style>
+    <link rel="stylesheet" href="Styles.css" />
   </head>
   <body>
     <div class="search">
