--- a/IndexWeatherApp.html
+++ b/IndexWeatherApp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WeatherApp</title>
-    <link rel="stylesheet" href="Styles.css" />
+    <link rel="stylesheet" href="Styles.css>" />
   </head>
   <body>
     <div class="search">
@@ -60,7 +60,10 @@
       <p>
         This is coded by
         <a href="">Noziphezinhle <em>Nozzie</em> Nzimande</a> and is
-        <a href=""> on Github</a> and <a href=""> hosted on Netlify</a>
+        <a href="https://github.com/Nozzie-Dev/WeatherAppSheCodes">
+          on Github</a
+        >
+        and <a href=""> hosted on Netlify</a>
       </p>
     </footer>
     <script>
